--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
-/*  your css code here. If applicable */
+:root {
+      background-color: rgb(135, 206, 235);
+    },
+p:first-child {
+  background-color: black;
+  color: white;
+}
+
+p:nth-child(2) {
+  /* No custom styling = default */
+  color: initial;
+}
+
+p:last-child {
+  color: red;
+}
