--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 :root {
       background-color: rgb(135, 206, 235);
-    },
+    }
+
 p:first-child {
   background-color: black;
   color: white;
 }
 
 p:nth-child(2) {
-  /* No custom styling = default */
   color: initial;
 }
 
